--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@ footer{
     margin: 0;
     padding: 90px;
     width: 100%;
-    height: 503px;
+    height: 540px;
     background-color: #030305;
 }
 
@@ -78,6 +78,42 @@ footer .contact-info {
 footer .news-letter {
     width: 277px;
 }
+
+footer  .paperplane {
+    margin-top: 90px;
+    position: relative;
+    display: flex;
+    background-color: white;
+    border-radius: 20px;
+    width: 250px;
+    height: 40px;
+    
+}
+
+footer .paperplane input {
+    width: 250px;
+    height: 40px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border: none;
+  
+}
+
+footer .paperplane input::placeholder {
+    text-align: center;
+}
+
+footer .paperplane input:focus{
+    outline: none;
+}
+
+footer .paperplane .buttons {
+    background-color: #FF3334;
+    border-radius: 20px;
+    width: 70px;
+    border: none;
+}
+
 
 footer .copyright {
     margin: 0px;
