--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@ footer{
     margin: 0;
     padding: 90px;
     width: 100%;
-    height: 540px;
+    height: 590px;
     background-color: #030305;
 }
 
@@ -20,7 +20,8 @@ footer{
     padding-left: 30px;
     position: relative;
     display: flex;
-    height: 230px;
+    flex-wrap: wrap;
+    height: 300px;
 }
 
 .foot-a {
